Otros cambios de estilo

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <!--Start: Loading Animation-->
     <style>
         body {
-            background-color: #212121;
+            background-color: #1e1111;
         }
 
         .spinner {
