--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         .container1 > div, .container2 > div, .container3 > div {
             width: 30px;
             height: 30px;
-            background-color: #b5b6b5;
+            background-color: #1e1111;
 
             border-radius: 100%;
             position: absolute;
