--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         BOX593
     </title>
     <base href="/">
-    <meta name="description" content="Latest updates and statistic charts">
+    <meta name="description" content="Club Casillero - Plataforma Courier a Ecuador">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--begin::Web font -->
