--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
         BOX593
     </title>
     <base href="/">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta name="description" content="Club Casillero - Plataforma Courier a Ecuador">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
