--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <!--Start: Loading Animation-->
     <style>
         body {
-            background-color: #e753a1;
+            background-color: #365ba2;
         }
 
         .spinner {
@@ -69,7 +69,7 @@
         .container1 > div, .container2 > div, .container3 > div {
             width: 30px;
             height: 30px;
-            background-color: #e753a1;
+            background-color: #365ba2;
 
             border-radius: 100%;
             position: absolute;
