--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>
-        EDU SHOP
+        TIA BOX
     </title>
     <base href="/">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -56,7 +56,7 @@
     <!--Start: Loading Animation-->
     <style>
         body {
-            background-color: #365ba2;
+            background-color: #db2226;
         }
 
         .spinner {
@@ -69,7 +69,7 @@
         .container1 > div, .container2 > div, .container3 > div {
             width: 30px;
             height: 30px;
-            background-color: #365ba2;
+            background-color: #db2226;
 
             border-radius: 100%;
             position: absolute;
